Change project name to RXAndroidPractice

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">RXJavaPractice</string>
+    <string name="app_name">RXAndroidPractice</string>
 </resources>
